3866 panic in idm module 3867 stmfCreateLu failed: GUID_IN_USE 3868 iscsi target not accepting any new connections Reviewed by: Sebastien Roy <sebastien.roy@delphix.com> Reviewed by: Jeremy Jones <jeremy@delphix.com> Reviewed by: Eric Diven <eric.diven@delphix.com> Reviewed by: Richard Lowe <richlowe@richlowe.net> Reviewed by: T Nguyen <truongqnguien@gmail.com> Approved by: Gordon Ross <gwr@nexenta.com>